--- a/langs/ar-SA.json
+++ b/langs/ar-SA.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "هل تريد حفظ التغييرات على الماكرو الخاص بك؟",
   "MESSAGE/KEYBINDS/EMPTY": "الرجاء إدخال ربط مفتاح أولاً",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "تبديل سبايدر داش",
   "GM_VAR/0062": "تبديل داش فاير",
   "GM_VAR/0096": "تبديل أثر الموجة",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "اللغة",
   "HOME/SEARCH/SEARCH": "",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "تجميلي",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "نسبة مئوية دقيقة",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "يسمح بتخصيص المنازل العشرية لإعداد المنازل العشرية للنسبة المئوية داخل اللعبة",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "النسبة المئوية الدقيقة",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "منزلة عشرية واحدة",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "منزلتان عشريتان",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "ثلاث منازل عشرية",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "أربع منازل عشرية",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "خلل دوران الكرة",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "يعيد إنشاء خلل برميل الدوران الخاص بالإصدار 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "بدون تأثير الدائرة",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "المعدل (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "المعدل",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "أثر الموجة عند الموت",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "يحافظ على رؤية أثر الموجة عند الموت",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "مضاعف نبض الموجة",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "يبدأ تلقائيًا بتنزيل الأغاني عند فتح صفحة المستوى",
   "LEVEL/HACK_AUTO_START_POS": "نقطة البداية التلقائية",
   "LEVEL/HACK_AUTO_START_POS/TIP": "يضع تلقائيًا نقاط بداية عند البوابات",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "النقر بين الإطارات",
   "LEVEL/CBF/HACK_CBF/TIP": "يبدل خاصية Click Between Frames بواسطة Syzzi (يجب تثبيتها!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "النقر على الخطوات",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "يسجل المدخلات فقط بدقة 240 TPS، مع الحفاظ على الفيزياء الأساسية",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "تجاوز حد نقاط التحقق",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "الخاصة",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "البذرة",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "البذرة",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "بذرة عشوائية",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "يجعل المحفزات العشوائية متسقة عبر المحاولات (بما في ذلك التدريب)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "الوقت (مللي ثانية)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " إطار",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "طول محرر غير محدود",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "إظهار أثر حدود الاصطدام",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "يعرض أثرًا لمكان ذهاب حدود اصطدام لاعبك أثناء محاولة، يتطلب إظهار حدود الاصطدام",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
@@ -627,6 +640,7 @@
   "UTILITY": "الأدوات",
   "UTILITY/CLICKS/P1": "نقر P1",
   "UTILITY/CLICKS/P2": "نقر P2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "يسار",
