--- a/langs/ca-ES.json
+++ b/langs/ca-ES.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Vols desar els canvis al teu macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Si us plau, introdueix primer una tecla d'accés",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Desactivar",
   "ICONIC/EFFECTS": "Efectes",
   "ICONIC/GENERAL": "General",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Commuta Spider Dash",
   "GM_VAR/0062": "Commuta Foc Dash",
   "GM_VAR/0096": "Commuta Deixant del Wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH/SEARCH": "Cercar",
   "HOME/SEARCH/AUTO_SELECT": "Seleccionar Automàticament",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmètic",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Percentatge Precís",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Permet la personalització dels decimals per a la configuració de Decimals de Percentatge en el joc",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Percentatge Precís",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Decimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Decimals",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Decimals",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Decimals",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Error de Rotació de la Ball",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recrea l'error del barrel-roll de la 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "Amagar Efecte Cercle",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Taxa (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Taxa",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Deixant del Wave en Morir",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Manté el deixant del wave visible en morir",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicador de Pulsació d'Onatge",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Comença a baixar cançons automàticament quan obris la pàgina del nivell",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automàtic",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coŀloca StartPos's automàticament als portals",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Commuta «Click Between Frames» de Syzzi (ha d'estar instaŀlat!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Només registra les entrades amb precisió de 240 TPS, mantenint la física original",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Ometre Límit de Punts de Control",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Especials",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Llavors",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Llavors",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Llavors Aleatòries",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Fa que els triggers aleatoris siguin consistents entre intents (inclosa la pràctica)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Temps (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " fotogrames",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longitud d'Editor Sense Límit",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Deixant de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra un deixant de per on ha anat la hitbox del teu jugador durant un intent, es requereix Mostrar Hitboxes",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar Trajectòria",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilitat",
   "UTILITY/CLICKS/P1": "Clic P1",
   "UTILITY/CLICKS/P2": "Clic P2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Obrir «DevTools»",
   "UTILITY/DEV_TOOLS/TIP": "Obre el mod de Geode «DevTools», cal que estigui prèviament instaŀlat",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Esquerra",
