--- a/langs/en-GB.json
+++ b/langs/en-GB.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Do you want to save the changes to your macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Please input a keybind first",
   "MESSAGE/KEYBINDS/UNBINDABLE": "Keybinds are not allowed on the selected element",
+  "MESSAGE/UTILITY/CRASH/0": "Are you sure you want to crash Geometry Dash? Unsaved data will be lost",
+  "MESSAGE/UTILITY/CRASH/1": "You want to CRASH the game. CONFIRM?",
+  "MESSAGE/UTILITY/CRASH/2": "CRASH GAME?",
   "ICONIC/DISABLE": "Disable",
   "ICONIC/EFFECTS": "Effects",
   "ICONIC/GENERAL": "General",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Switch Spider Dash",
   "GM_VAR/0062": "Switch Dash Fire",
   "GM_VAR/0096": "Switch Wave Trail",
+  "HOME/AUTO_UPDATE": "Auto-Update",
+  "HOME/AUTO_UPDATE/TIP": "Toggles automatic updates, if an update has already been downloaded it will be installed on restart",
   "HOME/LANGUAGE": "Language",
   "HOME/SEARCH/SEARCH": "Search",
   "HOME/SEARCH/AUTO_SELECT": "Auto-Select",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmetic",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Accurate Percentage",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Allows decimal place customisation for the in-game Percentage Decimals setting",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Accurate Percentage",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Decimal Place",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Decimal Place",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Decimal Place",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Decimal Place",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "Better Calculation",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "Makes % more accurate and fixes percentage with Start Positions",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "Decimals",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "Decimals",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Rotation Bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recreates the 2.0 barrel-roll bug",
   "COSMETIC/HACK_NO_CIRCLES": "No Circle Effect",
@@ -219,7 +223,7 @@
   "COSMETIC/HACK_NO_WAVE_PULSE/TIP": "Disables wave pulsing",
   "COSMETIC/HACK_NO_WAVE_TRAIL": "No Wave Trail",
   "COSMETIC/HACK_NO_WAVE_TRAIL/TIP": "Disables the hard wave trail, standard trail remains",
-  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "No Wave Trail Behind",
+  "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND": "No Trail Behind Wave",
   "COSMETIC/HACK_NO_WAVE_TRAIL_BEHIND/TIP": "Disables default player trail behind the wave trail",
   "COSMETIC/HACK_PLAYER_ON_TOP": "Player on Top",
   "COSMETIC/HACK_PLAYER_ON_TOP/TIP": "Forces the player (and wave trail) to appear above all objects",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Rate (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Rate",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "Trail Always On",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "Keeps player trail always visible",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave Trail on Death",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Keeps wave trail visible on death",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Pulse Multiplier",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatically starts downloading songs when you open the level page",
   "LEVEL/HACK_AUTO_START_POS": "Auto StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automatically places StartPos's at portals",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "Click Between Steps",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "Toggles the Click Between Steps in-game setting",
+  "LEVEL/HACK_CBF_GMVAR_COS": "Click on Steps",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "Toggles the Click on Steps in-game setting",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Toggles Click Between Frames by Syzzi (must be installed!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "Click Between Steps",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "Toggles the Click Between Steps in-game setting",
-  "LEVEL/CBF/HACK_COS_VANILLA": "Click on Steps",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "Toggles the Click on Steps in-game setting",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Only registers inputs with 240 TPS precision, keeping vanilla physics",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Bypass",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Specials",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "Lock Variance",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "Locks random variance on triggers",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Random Seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Makes random triggers consistent across attempts (including practice)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Time (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " frames",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "Require Show Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Uncapped Editor Length",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "Trail Opacity",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "Trail Opacity",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "%",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "Highlight Half-ticks",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "Highlights ticks where Click Between Steps took affect",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Show Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player's hitbox went during an attempt, Show Hitboxes required",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Show Trajectory",
@@ -521,7 +534,7 @@
   "UNIVERSAL/HACK_MAIN_MENU_PLAY": "Main Menu Play",
   "UNIVERSAL/HACK_MAIN_MENU_PLAY/TIP": "Take control of gameplay in the main menu",
   "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT": "No Music Fade Out",
-  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Stops songs fading out. By Beat",
+  "UNIVERSAL/HACK_NO_AUDIO_FADE_OUT/TIP": "Stops songs fading out. Made by Beat",
   "UNIVERSAL/HACK_NO_TRANSITION": "No Transition",
   "UNIVERSAL/HACK_NO_TRANSITION/TIP": "Shortens scene transition time to 0s",
   "UNIVERSAL/HACK_TRANSPARENT_LISTS": "Transparent Lists",
@@ -627,6 +640,7 @@
   "UTILITY": "Utility",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/CRASH": "Crash Game",
   "UTILITY/DEV_TOOLS": "Toggle DevTools",
   "UTILITY/DEV_TOOLS/TIP": "Opens Geode DevTools, requires the mod to be installed",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Left",
