--- a/langs/es-ES.json
+++ b/langs/es-ES.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "¿Quieres guardar los cambios realizados en la macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, tienes que establecer primero un atajo de teclado",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Desactivar",
   "ICONIC/EFFECTS": "Efectos",
   "ICONIC/GENERAL": "General",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Cambiar dash de araña",
   "GM_VAR/0062": "Cambiar fuego de dash",
   "GM_VAR/0096": "Cambiar estela de wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH/SEARCH": "Buscar",
   "HOME/SEARCH/AUTO_SELECT": "Seleccionar automáticamente",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosméticos",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Porcentaje preciso",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Permite configurar la cantidad de decimales que puede mostrar con la opción de Porcentaje Preciso",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Porcentaje preciso",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "Una decimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "Dos decimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "Tres decimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Cuatro decimales",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de rotación de la ball",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recrea el bug de la rotación de la ball de la 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "Ocultar efecto círculo",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Tasa",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Estela del wave al morir",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Mantiene visible la estela del wave al morir",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicador",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Inicia automáticamente la descarga de canciones al abrir la página de un nivel",
   "LEVEL/HACK_AUTO_START_POS": "StartPos automático",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Coloca automáticamente los StartPos en los portales",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Interruptor para el «Click Between Frames» de Syzzi (¡debe estar instalado!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra los inputs con una precisión de 240 TPS, manteniendo las físicas Vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Deslimitar cantidad de checkpoints",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Especiales",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Semilla",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Semilla",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Semilla aleatoria",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Hace consistentes los triggers aleatorios en modo normal y práctica",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Tiempo (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " cuadros",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longitud infinita en el editor",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar rastro de hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Muestra un rastro del recorrido de tu jugador durante un intento, requiere activar 'Mostrar hitboxes'",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar trayectoria",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilidades",
   "UTILITY/CLICKS/P1": "Tecla P1",
   "UTILITY/CLICKS/P2": "Tecla P2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Abrir «DevTools»",
   "UTILITY/DEV_TOOLS/TIP": "Abre el mod de Geode «DevTools», tiene que estar previamente instalado",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Izq",
