--- a/langs/eu-ES.json
+++ b/langs/eu-ES.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Zure macro-an aldaketak gorde nahi duzu?",
   "MESSAGE/KEYBINDS/EMPTY": "Mesedez, lehenik lasterbide bat sar ezazu",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Itzali",
   "ICONIC/EFFECTS": "Efektuak",
   "ICONIC/GENERAL": "Orokorra",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Aldatu Spider-aren Dash",
   "GM_VAR/0062": "Aldatu Dash Sua",
   "GM_VAR/0096": "Aldatu Wave Aztarna",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Hizkuntza",
   "HOME/SEARCH/SEARCH": "Bilatu",
   "HOME/SEARCH/AUTO_SELECT": "Hautatu Automatikoki",
@@ -121,11 +126,10 @@
   "COSMETIC": "Apaingarriak",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Portzentai Zehatza",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Joku barruko Portzentai Dezimal-konfigurazioan, dezimal-toki kopurua pertsonalizatzeko aukera ematen du",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Portzentai Zehatza",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "Dezimal Bat",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "Bi Dezimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "Hiru Dezimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Lau Dezimal",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Biraketaren Bug-a",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 bertsioaren «Ball Barrel-Roll» errorea birsortzen du",
   "COSMETIC/HACK_NO_CIRCLES": "Borobil Efekturik Ez",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tasa (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Tasa",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Hiltzean Wave-Aztarna",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Hiltzean, wave-aztarna mantentzen du",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Biderkatzailea",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Mailaren orria irekitzean, abestiak automatikoki jaisten hasten dira",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Automatikoa",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Portaletan automatikoki StartPos kokatzen ditu",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Syzzi-k sortutako «Click Between Frames»-en etengailua (jadanik jaitsita egin behar da!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Sarrerak 240 TPS-ko zehaztasunarekin bakarrik erregistratzea egiten ditu, jatorrizko fisikak mantenduz",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Mugaren Bypass",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Bereziak",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Hazia",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Hazia",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Ausazko Hazia",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Ausazko trigger-ak saiakeren artean iraunkorrak egiten ditu (praktikak barne)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Denbora (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " fotograma",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Editorean Mugagabea",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox-Aztarna Erakutsi",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Jokalariak saiakeran nondik igarotu zuen bidearen aztarna erakusten du, Hitbox-ak Erakutsi aukera behar du",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Bidea Erakutsi",
@@ -627,6 +640,7 @@
   "UTILITY": "Tresneria",
   "UTILITY/CLICKS/P1": "P1 Klik",
   "UTILITY/CLICKS/P2": "P2 Klik",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "«DevTools» Ireki",
   "UTILITY/DEV_TOOLS/TIP": "Geode-ko «DevTools» irekitzen du, mod hau instalatuta egon behar da",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Ezkerra",
