--- a/langs/ga-IE.json
+++ b/langs/ga-IE.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Teanga",
   "HOME/SEARCH/SEARCH": "Cuardach",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmaideacha",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Rian Tonn Ar Bhás",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Coinníonn sé rian na dtonnta le feiceáil tar éis bháis",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Lolraitheoir Pulse Tonn ",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Tosaíonn sé amhráin a íoslódáil go huathoibríoch nuair a osclaíonn tú an leathanach leibhéal",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Seachbhóthar Teorainn Seicphointe",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Síol",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Síol",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Síl Randamach",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Déanann truicear randamach comhsheasmhach thar iarrachtaí (cleachtas san áireamh)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Am (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " fráma",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Fad Eagarthóir Gan Teorainn",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Taispeáin Hitboxes Trail",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Taispeánann sé rian den áit a ndeachaigh do Hitbox imreoir le linn iarrachta, Taispeáin Hitboxes ag teastáil",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
@@ -627,6 +640,7 @@
   "UTILITY": "Fóntas",
   "UTILITY/CLICKS/P1": "Imreoir 1 Cliceáil",
   "UTILITY/CLICKS/P2": "Imreoir 2 Cliceáil",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Clé",
