--- a/langs/ja-JP.json
+++ b/langs/ja-JP.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "マクロへの変更を保存しますか？",
   "MESSAGE/KEYBINDS/EMPTY": "まずキー設定を入力してください",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "無効",
   "ICONIC/EFFECTS": "エフェクト",
   "ICONIC/GENERAL": "一般",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "スパイダーダッシュ切り替え",
   "GM_VAR/0062": "ダッシュファイア切り替え",
   "GM_VAR/0096": "ウェーブトレイル切り替え",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "言語",
   "HOME/SEARCH/SEARCH": "検索",
   "HOME/SEARCH/AUTO_SELECT": "自動選択",
@@ -121,11 +126,10 @@
   "COSMETIC": "コスメティック",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "正確なパーセンテージ",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "ゲーム内のパーセンテージ小数設定における小数点桁数をカスタマイズ可能にします",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "小数点設定",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "小数1桁",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "小数2桁",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "小数3桁",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "小数4桁",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball回転バグ",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "バージョン2.0のバレルロールバグを再現します",
   "COSMETIC/HACK_NO_CIRCLES": "サークルエフェクト無効",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "カットレート (倍)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "カットレート",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "倍",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "死亡時に波トレイルを表示",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "死亡時にも波トレイルを表示させます",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "波のパルス倍率",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "レベルページを開くと自動で曲をダウンロード開始します",
   "LEVEL/HACK_AUTO_START_POS": "自動スタートポジ",
   "LEVEL/HACK_AUTO_START_POS/TIP": "ポータルにStartPosを自動で配置します",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Syzzi製Click Between Framesを切り替えます（インストール必須！）",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "ステップでクリック",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240TPS精度でのみ入力を登録し、バニラ物理を保持します",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "チェックポイント制限解除",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "スペシャル",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "シード",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "シード",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "ランダムシード",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "ランダムトリガーを練習モードを含む全試行で一貫させます",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "時間 (ミリ秒)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": "フレーム",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "エディタ長さ無制限",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "ヒットボックストレイル表示",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "試行中のプレイヤーヒットボックスの軌跡を表示します（ヒットボックス表示が必要）",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "軌道表示",
@@ -627,6 +640,7 @@
   "UTILITY": "ユーティリティ",
   "UTILITY/CLICKS/P1": "P1クリック",
   "UTILITY/CLICKS/P2": "P2クリック",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "DevToolsを開く",
   "UTILITY/DEV_TOOLS/TIP": "Geode DevToolsを開きます（modのインストールが必要です）",
   "UTILITY/DIRECTIONAL/P1_LEFT": "左",
