--- a/langs/pl-PL.json
+++ b/langs/pl-PL.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Czy chcesz zapisać zmiany w swoim makro?",
   "MESSAGE/KEYBINDS/EMPTY": "Najpierw wprowadź skrót klawiszowy",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Wyłącz",
   "ICONIC/EFFECTS": "Efekty",
   "ICONIC/GENERAL": "Ogólne",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Zmień dashowanie spidera",
   "GM_VAR/0062": "Zmień ogień dashowania",
   "GM_VAR/0096": "Zmień ślad wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Język",
   "HOME/SEARCH/SEARCH": "Wyszukaj",
   "HOME/SEARCH/AUTO_SELECT": "Automatyczne zaznaczenie",
@@ -121,11 +126,10 @@
   "COSMETIC": "Kosmetyczne",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Dokładny procent",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Zezwala na zmianę miejsca dziesiętnego dla wbudowanego ustawienia \"Percentage Decimals\"",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Dokładny procent",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Miejsce Dziesiętne",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Miejsce Dziesiętne",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Miejsce Dziesiętne",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Miejsce Dziesiętne",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug barrel roll",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Odtwarza bug obracania w trybie ball (barrel roll) z wersji 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "Wyłącz efekt okręgu",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tempo (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Tempo",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Ślad wave po śmierci",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Zostawia ślad trybu wave po śmierci",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Mnożnik pulsu wave",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatycznie rozpoczyna pobieranie utworów po otwarciu strony poziomu",
   "LEVEL/HACK_AUTO_START_POS": "Automatyczny StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automatycznie kładzie StartPosy na portalach",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Włącza Click Between Frames autorstwa Syzzi (musi być zainstalowane!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click On Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Rejestruje wejścia z precyzją 240 TPS, zachowując standardową fizykę gry",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Więcej checkpointów",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Specjalne",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Losowy seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Czyni losowe triggery spójnymi między próbami (wliczając tryb practice)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Czas (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " klatek",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Nieograniczona długość edytora",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Pokaż slad hitboxów",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Pokazuje ślad, gdzie hitbox gracza przeszedł podczas próby, wymaga 'Pokaż Hitboxy'",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Pokaż trajektorię",
@@ -627,6 +640,7 @@
   "UTILITY": "Narzędzia",
   "UTILITY/CLICKS/P1": "Klik P1",
   "UTILITY/CLICKS/P2": "Klik P2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Otwórz DevTools",
   "UTILITY/DEV_TOOLS/TIP": "Otwiera DevTools, wymaga zainstalowanego moda",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Lewo",
