--- a/langs/es-CL.json
+++ b/langs/es-CL.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "¿Querí guardar los cambios a tu macro seleccionada?",
   "MESSAGE/KEYBINDS/EMPTY": "Keybinds Vacias waxo.",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Desactivar",
   "ICONIC/EFFECTS": "Efectos",
   "ICONIC/GENERAL": "General",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Cambiar dash de araña (REFERENCIA AL CANGRI)",
   "GM_VAR/0062": "Cambiar fuego de dash (ANDAMOS DE PANA)",
   "GM_VAR/0096": "Cambiar rastro de wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH/SEARCH": "Buscar",
   "HOME/SEARCH/AUTO_SELECT": "Seleccionar",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmético",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Porcentaje preciso",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Habilita personalizacion de cantidad de decimales para la configuracion Porcentaje preciso",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Decimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 decimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 decimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 decimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 decimales",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de Giro de Bola",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recrea el bug de giro de barril de la bola 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "Sin efecto circular",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Intervalo",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Intervalo",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Estela de Onda al Morir",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Mantiene la estela de onda visible al morir",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicador de Pulso de Onda",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automáticamente empieza a descargar canciones cuando abres la página del nivel",
   "LEVEL/HACK_AUTO_START_POS": "StartPos automático",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automáticamente coloca StartPos en portales",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Activa el Click Between Frames de Syzzi (Debes tenerlo instalado!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Clickear en pasos",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra inputs únicamente con precisión de 240 TPS, manteniendo físicas vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Límite de Checkpoints",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Especiales",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Semilla",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Semilla",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Semilla Aleatoria",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Hace que los activadores aleatorios sean consistentes entre intentos (incluida la práctica)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Tiempo (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " cuadros",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Largo del Editor Sin Límite",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Estela de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Muestra una estela de por dónde pasó la hitbox de tu jugador durante un intento, se necesita 'Mostrar Hitboxes'",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar Trayectoria",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilidad",
   "UTILITY/CLICKS/P1": "Click J1",
   "UTILITY/CLICKS/P2": "Click J2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Abrir herramientas de desarrollador",
   "UTILITY/DEV_TOOLS/TIP": "Abre las herramientas de desarrollador de Geode, requiere de que esté instalado",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Izquierda",
