--- a/langs/fi-FI.json
+++ b/langs/fi-FI.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Kieli",
   "HOME/SEARCH/SEARCH": "Hae",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Kosmeettinen",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Waven Jälki Kuolemassa",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Pitää waven jäljen näkyvillä kuoleman jälkeen",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Waven Pulssin Koko",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Aloittaa automaattisesti kappaleiden lataamisen, kun avaat tasosivun",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpointtien Rajan Poistaminen",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Siemen",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Siemen",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Satunnainen Seedi",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Tekee random triggereistä yhdenmukaisia ​​eri yrityksissä (mukaan lukien practice)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Aika (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": "Framea",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Rajoittamaton Editorin Pituus",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Näytä Hitboxien Jälki",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Näyttää jäljen siitä, mihin pelaajan hitboxi meni yrityksen aikana. Näytä hitboxit vaadittu",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
@@ -627,6 +640,7 @@
   "UTILITY": "Apuohjelma",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Vasen",
