--- a/langs/fr-FR.json
+++ b/langs/fr-FR.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Voulez-vous enregistrer les changements de la macro ?",
   "MESSAGE/KEYBINDS/EMPTY": "Veuillez saisir un raccourci d'abord",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Inverser Spider Dash",
   "GM_VAR/0062": "Inverser Fire Dash",
   "GM_VAR/0096": "Inverser Traînée Wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Langue",
   "HOME/SEARCH/SEARCH": "Rechercher ",
   "HOME/SEARCH/AUTO_SELECT": "Sélection Auto",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmétique",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Pourcentage précis",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Permet de personnaliser le nombre de décimales dans les paramètres de pourcentage du jeu",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Pourcentage précis",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Décimale",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Décimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Décimales",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Décimales",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de rotation (boule)",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recréé le bug de rotation en \"tonneau\" de la v2.0 sur la boule",
   "COSMETIC/HACK_NO_CIRCLES": "Pas d'effet de cercle",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Taux (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Taux",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Traînée Wave à la mort",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Garde la traînée de la Wave visible après une mort",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicateur Pulsation (Wave)",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Télécharge automatiquement les musiques et les sons sur la page du niveau",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Auto",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Place automatiquement une StartPos aux portails",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Active/Désactive le mod Click Between Frames de Syzzi (doit être installé !)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Clique aux étapes",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "N'enregistre que les inputs avec une précision de 240 TPS, en conservant la physique d'origine.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Limite de Checkpoints",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Objets Spéciaux",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed ",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed ",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Seed aléatoire",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rend les déclencheurs aléatoires cohérents entre les tentatives (même en mode Practice)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Temps (ms) ",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " image(s)",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Longueur d'éditeur illimitée",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Permet d'afficher la traînée des Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Montre une traînée de la position des Hitboxes pendant une tentative, nécessite d'afficher les hitboxes",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Afficher la trajectoire",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilitaires",
   "UTILITY/CLICKS/P1": "Clic j1",
   "UTILITY/CLICKS/P2": "Clic j2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Ouvrir DevTools",
   "UTILITY/DEV_TOOLS/TIP": "Ouvre le mod DevTools de Geode (doit être installé !)",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Gauche",
