--- a/langs/hu-HU.json
+++ b/langs/hu-HU.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Biztosan lemented a változtatásaidat a visszajátszásodban?",
   "MESSAGE/KEYBINDS/EMPTY": "Előbb adj meg egy gyorskombinációt.",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Pók dashelés váltása",
   "GM_VAR/0062": "Dash tűz váltása",
   "GM_VAR/0096": "Wave vonal váltása",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Nyelv",
   "HOME/SEARCH/SEARCH": "Keresés",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Vizuális",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Pontos százalék",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Pontosabban be lehet állítani hogy hány számot akarsz a százalékod egész száma után ",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "Tizedesjegyekig",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 számjegy",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 számjegy",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 számjegy",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball forgási bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Visszahoz egy régi bugot a ballból lévő transitionöknél (teljesen vizuális)",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave Vonala Halál Után",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "A wave vonala látható marad halál után",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Pulzálás Mennyisége",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automatikusan elkezdi letölteni a zenét, amikor megnyílik a pálya oldala",
   "LEVEL/HACK_AUTO_START_POS": "Auto StartPOS lerakás",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Egy StartPOS-t le fog rakni minden portálnál.",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Kattintás képkockák között",
   "LEVEL/CBF/HACK_CBF/TIP": "Bekapcsolja a Click Between Frames modot amit Syzzi készített. (Előtte le kell tölteni Geode-ban!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Kattintás a képkockákon",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240 képkockánként fog frissülni a játékod, megtartva a vanilla játék fizikáit.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Ellenörzőpont Limit",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Speciális",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Random Seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "A random triggerek ugyan azt fogják csinálni minden attempt-ben (még gyakorló mode-ban is)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Idő (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " képkocka",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Végtelen Editor hossz",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox Trail mutatása",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Shows a trail of where your player hitbox went during an attempt, Show Hitboxes required",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mozgáspálya mutatása",
@@ -627,6 +640,7 @@
   "UTILITY": "Egyebek",
   "UTILITY/CLICKS/P1": "Első játékos klikk",
   "UTILITY/CLICKS/P2": "Második játékos klikk",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Bal",
