--- a/langs/it-IT.json
+++ b/langs/it-IT.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Vuoi salvare i cambiamenti eseguiti alla macro?",
   "MESSAGE/KEYBINDS/EMPTY": "Prima inserire un tasto",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Disabilita",
   "ICONIC/EFFECTS": "Effetti",
   "ICONIC/GENERAL": "Generale",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Cambia effetto dash dello Spider",
   "GM_VAR/0062": "Cambia effetto dash",
   "GM_VAR/0096": "Cambia scia wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Lingua",
   "HOME/SEARCH/SEARCH": "Cerca",
   "HOME/SEARCH/AUTO_SELECT": "Selezionamento automatico",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmetica",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Percentuale Accurata",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Permette di personalizzare la precisione in decimali della progress bar",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Decimali",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Posizione Decimale",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Posizioni Decimali",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Posizioni Decimali",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Posizioni Decimali",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug Rotazione Ball",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Ricrea il Bug 'barrel-log' della 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "No effetto cerchio",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Frequenza",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Frequenza",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Scia Wave Dopo Morte",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Mantiene visibile la scia della Wave anche dopo la morte",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Dimensione",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Avvia automaticamente il download delle canzoni quando apri la pagina del livello",
   "LEVEL/HACK_AUTO_START_POS": "Auto StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Posiziona automaticamente gli StartPos in corrispondenza dei portali",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Attiva Click Between Frames di Syzzi (deve essere installato!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click su Step",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registra gli input solo con precisione a 240 TPS, mantenendo la fisica vanilla",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass Limite Checkpoint",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Speciali",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Seed Casuale",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rende i trigger casuali consistenti tra i tentativi (inclusa la modalità pratica)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Tempo (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " frame",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Lunghezza Illimitata Editor",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostra Traccia Hitbox",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra una traccia della posizione della hitbox del giocatore durante un tentativo, richiede Mostra Hitbox",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostra Traiettoria",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilità",
   "UTILITY/CLICKS/P1": "Click G1",
   "UTILITY/CLICKS/P2": "Click G2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Apri DevTools",
   "UTILITY/DEV_TOOLS/TIP": "Apre la mod di Geode DevTools, richiede che la mod sia installata",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Sinistra",
