--- a/langs/ko-KR.json
+++ b/langs/ko-KR.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "매크로의 변경 사항을 저장하시겠습니까?",
   "MESSAGE/KEYBINDS/EMPTY": "먼저 키를 설정해 주세요.",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "비활성화",
   "ICONIC/EFFECTS": "이펙트",
   "ICONIC/GENERAL": "일반",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "거미 대시 전환",
   "GM_VAR/0062": "대시 불꽃 전환",
   "GM_VAR/0096": "웨이브 트레일 전환",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "언어",
   "HOME/SEARCH/SEARCH": "검색",
   "HOME/SEARCH/AUTO_SELECT": "자동 선택",
@@ -121,11 +126,10 @@
   "COSMETIC": "외형",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "정확한 퍼센트",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "게임 내 퍼센트 소수점 설정을 사용자 지정할 수 있습니다.",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "정확한 퍼센트",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "소수점 1자리",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "소수점 2자리",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "소수점 3자리",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "소수점 4자리",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "볼 회전 버그",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0 버전의 배럴 롤 버그를 재현합니다.",
   "COSMETIC/HACK_NO_CIRCLES": "원형 파티클 비활성화",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "비율 (배)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "비율",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "배",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "사망 시 웨이브 트릴",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "사망 시 웨이브 트레일을 계속 표시합니다.",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "웨이브 펄스 승수",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "레벨 페이지를 열면 자동으로 음악을 다운로드합니다.",
   "LEVEL/HACK_AUTO_START_POS": "자동 스타트포스",
   "LEVEL/HACK_AUTO_START_POS/TIP": "포탈에 스타트포스를 자동으로 배치합니다.",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Click Between Frames를 켜거나 끕니다. by Syzzi (설치가 필요합니다!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "스탭에서 클릭",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "240 TPS 정밀도의 입력만 감지하며, 기본 물리를 유지합니다.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "체크포인트 제한 우회",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "특수",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "시드",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "시드",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "랜덤 시드",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "여러 시도에 걸쳐 랜덤 트리거를 일관되게 만듭니다. (연습 모드 포함)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "시간 (밀리초)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " 프레임",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "무제한 에디터 길이",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "히트박스 트레일 표시",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "시도 중 플레이어의 히트박스가 어디로 갔는지 트레일을 표시합니다, 히트박스 표시가 필요합니다.",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "궤적 표시",
@@ -627,6 +640,7 @@
   "UTILITY": "유틸리티",
   "UTILITY/CLICKS/P1": "플레이어 1 클릭",
   "UTILITY/CLICKS/P2": "플레이어 2 클릭",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "개발자 도구 열기",
   "UTILITY/DEV_TOOLS/TIP": "Geode 개발자 도구를 엽니다, 모드가 설치되어 있어야 합니다.",
   "UTILITY/DIRECTIONAL/P1_LEFT": "좌측",
