--- a/langs/pt-BR.json
+++ b/langs/pt-BR.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Você deseja salvar as mudanças feitas no macro atual?",
   "MESSAGE/KEYBINDS/EMPTY": "Por favor, adicione um atalho primeiro!",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Idioma",
   "HOME/SEARCH/SEARCH": "Pesquisa",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Cosmético",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Porcentagem precisa",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Permite a customização para a configuração de porcentagem decimal do jogo",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Porcentagem precisa",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Dígito Decimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Dígitos Decimais",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Dígitos Decimais",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Dígitos Decimais",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bug de Rotação da Bola",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Recria o bug da rotação da bola da 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Trilha da Wave na Morte",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Mantém a trilha da wave visível na morte",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Multiplicador de Pulso da Wave",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Automaticamente começa a baixar músicas quando você abrir a página da fase",
   "LEVEL/HACK_AUTO_START_POS": "StartPos automático",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Automaticamente coloca StartPos em portais",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "Ativa o Click Between Frames do Syzzi (precisa estar instalado!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Bypass de Limite de Checkpoint",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Semente",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Semente",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Semente Aleatória",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Torna os triggers aleatórios consistentes entre tentativas (incluindo prática)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Tempo (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " frames",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Comprimento do Editor Sem Limite",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Mostrar Trilha de Hitboxes",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Mostra uma trilha de onde a hitbox do jogador foi durante uma tentativa, exige Mostrar Hitboxes",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Mostrar trajetória",
@@ -627,6 +640,7 @@
   "UTILITY": "Utilidade",
   "UTILITY/CLICKS/P1": "Clique do P1",
   "UTILITY/CLICKS/P2": "Clique do P2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Esquerda",
