--- a/langs/ru-RU.json
+++ b/langs/ru-RU.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Вы хотите сохранить изменения макроса?",
   "MESSAGE/KEYBINDS/EMPTY": "Пожалуйста, сначала введите горячую клавишу",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "Выключить",
   "ICONIC/EFFECTS": "Эффекты",
   "ICONIC/GENERAL": "Главное",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Переключить след паука",
   "GM_VAR/0062": "Переключить огни деш орбов",
   "GM_VAR/0096": "Переключить след волны",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Язык",
   "HOME/SEARCH/SEARCH": "Поиск",
   "HOME/SEARCH/AUTO_SELECT": "Авто-выбор",
@@ -121,11 +126,10 @@
   "COSMETIC": "Косметика",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Точные проценты",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Позволяет настраивать точность процентов",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Точные проценты",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 знак после запятой",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 знака после запятой",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 знака после запятой",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 знака после запятой",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Баг вращения",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Воссоздает баг из 2.0 из-за которого переход из шара в другие режимы мог начинать эффект бочки",
   "COSMETIC/HACK_NO_CIRCLES": "Без эффекта круга",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (х)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Частота",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "х",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Волна при смерти",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Оставляет след волны после смерти",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Размер следа волны",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматически скачивает музыку при открытии страницы уровня",
   "LEVEL/HACK_AUTO_START_POS": "Автоматические точки возрождения",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматически ставит точки возрождения внутри порталов",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Клики меж кадров (CBF)",
   "LEVEL/CBF/HACK_CBF/TIP": "Включает Click Between Frames от Syzzi (Должен быть установлен!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Кликать в тики",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Регистрирует нажатия 240 раз в секунду, сохраняет ванильную физику",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Без лимита чекпоинтов",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Специальные",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Семя",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Семя",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Семя рандома",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Заставляет триггеры рандома каждый раз запускаться с одним и тем же сидом (так же работает в практике)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Время (мс)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " кадров",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Не ограничивать длину в редакторе",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "След хитбоксов",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показывает путь игрока в виде хитбоксов, требует включенный показ хитбоксов",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Показать траекторию",
@@ -627,6 +640,7 @@
   "UTILITY": "Разное",
   "UTILITY/CLICKS/P1": "Прыжок, 1 игрок",
   "UTILITY/CLICKS/P2": "Прыжок, 2 игрок",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "Открыть инструменты разработчика",
   "UTILITY/DEV_TOOLS/TIP": "Открывает Geode DevTools (Для работы требуется DevTools в Geode)",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Влево",
