--- a/langs/sv-SE.json
+++ b/langs/sv-SE.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "",
   "MESSAGE/KEYBINDS/EMPTY": "",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "",
   "GM_VAR/0062": "",
   "GM_VAR/0096": "",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Språk",
   "HOME/SEARCH/SEARCH": "Sök",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Kosmetiskt",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Exakt procent",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Tillåter anpassning av antalet decimaler för spelets inställning för procentdecimaler",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 decimal",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 decimaler",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 decimaler",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 decimaler",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Bollrotationsbuggen",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Återskapar 2.0 tunnerullningsbuggen",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Wave-spår vid död",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Håller wave-spåret synligt vid död",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave-pulsmultiplikator",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Laddar automatiskt ned låtar när nivåsidan öppnas",
   "LEVEL/HACK_AUTO_START_POS": "",
   "LEVEL/HACK_AUTO_START_POS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Klicka mellan bildrutor",
   "LEVEL/CBF/HACK_CBF/TIP": "Växlar Klick Mellan Bildrutor av Syzzi (måste vara installerad)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Klicka på steg",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Registrerar endast inmatning med 240 tps precision, samtidigt som vanilla-fysiken behålls",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Kringgå kontrollpunktsgräns",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Slumpad seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Slump-triggers ger samma resultat varje gång (inklusive övning)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Tid (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " bildrutor",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Obegränsad nivåskaparlängd",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Visa hitbox-spår",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Visar ett spår av spelarens hitbox under ett försök, kräver Visa hitboxar",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "",
@@ -627,6 +640,7 @@
   "UTILITY": "",
   "UTILITY/CLICKS/P1": "",
   "UTILITY/CLICKS/P2": "",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "",
