--- a/langs/tr-TR.json
+++ b/langs/tr-TR.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Makroya yaptığınız değişiklikleri kaydetmek ister misiniz?",
   "MESSAGE/KEYBINDS/EMPTY": "Öncelikle lütfen bir tuş atayınız",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Spider Dash Değiştir",
   "GM_VAR/0062": "Dash Ateşini Değiştir",
   "GM_VAR/0096": "Wave İzini Değiştir",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Dil",
   "HOME/SEARCH/SEARCH": "Ara",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Kozmetik",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Kesin Yüzdelik",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Oyun içi olan ayarı için ondalık basamak özelleştirilmesine izin verir.",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Kesin Yüzdelik",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Ondalık Basamak",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Ondalık Basamak",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Ondalık Basamak",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Ondalık Basamak",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Ball Dönme Bug",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "2.0'da olan dönme bugunu geri getirir",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Oran (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Oran",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Ölümde Wave İzi",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Ölünce wave izini görünür halde bırakır",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Nabzı Çarpanı",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Seviye sayfası açıldığında şarkıları otomatik indirir",
   "LEVEL/HACK_AUTO_START_POS": "Otomatik StartPos",
   "LEVEL/HACK_AUTO_START_POS/TIP": "StartPos'ları otomatik olarak portallara yerleştirir",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "",
   "LEVEL/CBF/HACK_CBF/TIP": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Girişleri yalnızca 240 TPS hassassiyetle algılar, sıradan fiziği korur.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Checkpoint Limit Baypas",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Özel Nesneler",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Rastgele Seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Rastgele triggerlarını oyunda tutarlı hale getirir (antreman modu dahil)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Zaman (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " kareler",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Sınırsız Editör Uzunluğu",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hitbox İzini Göster",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Oynanış sırasında oyuncunuzun hitboxunun nereye gittiğinin izini gösterir, Hitboxları Göster gerekli",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Yörüngeyi Göster",
@@ -627,6 +640,7 @@
   "UTILITY": "Araçlar",
   "UTILITY/CLICKS/P1": "P1 Tıklama",
   "UTILITY/CLICKS/P2": "P2 Tıklama",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Sol",
