--- a/langs/uk-UA.json
+++ b/langs/uk-UA.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Ви дійсно хочете зберегти зміни в цьому макросі?",
   "MESSAGE/KEYBINDS/EMPTY": "Будь ласка, спершу введіть гарячу клавішу",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Змінити деш-ефект павука",
   "GM_VAR/0062": "Змінити полум'я деш-ефекту",
   "GM_VAR/0096": "Змінити трейл вейву",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Мова",
   "HOME/SEARCH/SEARCH": "Пошук",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Косметичні",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Точна кількість відсотків",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Дозволяє кастомізувати відображення відсотків у грі у вигляді десяткового дробу, змінюючи десятковий розряд (кількість знаків після коми)",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Точна кількість відсотків",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "Десяті",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "Соті",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "Тисячні",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "Десятитисячні",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Баг оберту кулі",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Відтворює баг з обертом кулі (barrel-roll), який був у версії 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Частота (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Частота",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Трейл вейву після смерті",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Залишає трейл вейву після смерті видимим",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Коефіцієнт пульсації вейву",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Автоматично починає завантажувати трек, коли відкрито сторінку з рівнем",
   "LEVEL/HACK_AUTO_START_POS": "Автом. старт. позиції",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Автоматично ставить стартові позиції на порталах",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Вмикає мод «Click Between Frames» від Syzzi (ви повинні встановити мод, щоб користуватися ним!)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click on Steps",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Реєструє вхідні сигнали чітко у 240 TPS, зберігаючи традиційну фізику.",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Байпас чекпоінтів",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Особливі тіла",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Сід",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Сід",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Випадковий сід",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Стабілізує роботу тригерів рандому на всіх спробах (навіть у практиці)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Час (мс)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " кадрів",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Необмежена довжина в редакторі",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Показ хітбоксів трейлом",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Показує трейл у вигляді хітбоксів, який іде в тому ж напрямку, що й гравець; потрібен показ хітбоксів",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Показ траєкторії",
@@ -627,6 +640,7 @@
   "UTILITY": "Утиліти",
   "UTILITY/CLICKS/P1": "Клік гр. 1",
   "UTILITY/CLICKS/P2": "Клік гр. 2",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Вліво",
