--- a/langs/vi-VN.json
+++ b/langs/vi-VN.json
@@ -35,6 +35,9 @@
   "MESSAGE/REPLAY/SAVE": "Bạn có muốn lưu thay đổi đã thực hiện với macro không?",
   "MESSAGE/KEYBINDS/EMPTY": "Vui lòng nhập phím tắt trước",
   "MESSAGE/KEYBINDS/UNBINDABLE": "",
+  "MESSAGE/UTILITY/CRASH/0": "",
+  "MESSAGE/UTILITY/CRASH/1": "",
+  "MESSAGE/UTILITY/CRASH/2": "",
   "ICONIC/DISABLE": "",
   "ICONIC/EFFECTS": "",
   "ICONIC/GENERAL": "",
@@ -64,6 +67,8 @@
   "GM_VAR/0061": "Đổi trail Dash Spider",
   "GM_VAR/0062": "Đổi lửa Dash Spider",
   "GM_VAR/0096": "Đổi trail của Wave",
+  "HOME/AUTO_UPDATE": "",
+  "HOME/AUTO_UPDATE/TIP": "",
   "HOME/LANGUAGE": "Ngôn ngữ",
   "HOME/SEARCH/SEARCH": "Tìm kiếm",
   "HOME/SEARCH/AUTO_SELECT": "",
@@ -121,11 +126,10 @@
   "COSMETIC": "Chi tiết",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE": "Phần trăm Chính xác",
   "COSMETIC/ACCURATE_PERCENTAGE/HACK_ACCURATE_PERCENTAGE/TIP": "Cho phép tùy chỉnh vị trí thập phân cho cài đặt Percentage Decimal trong trò chơi",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS": "Phần trăm Chính xác",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/0": "1 Chữ số Thập phân",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/1": "2 Chữ số Thập phân",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/2": "3 Chữ số Thập phân",
-  "COSMETIC/ACCURATE_PERCENTAGE/DECIMALS/3": "4 Chữ số Thập phân",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/BETTER_CALCULATION/TIP": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS": "",
+  "COSMETIC/ACCURATE_PERCENTAGE/DROPDOWN/DECIMALS/PRE": "",
   "COSMETIC/HACK_BALL_ROTATION_BUG": "Lỗi Ball Rotation",
   "COSMETIC/HACK_BALL_ROTATION_BUG/TIP": "Tái hiện lỗi lộn vòng icon ở bản 2.0",
   "COSMETIC/HACK_NO_CIRCLES": "",
@@ -241,6 +245,8 @@
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE": "Tỷ lệ (x)",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/PRE": "Tỷ lệ",
   "COSMETIC/TRAIL_CUTTING/DROPDOWN/RATE/SUF": "x",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON": "",
+  "COSMETIC/HACK_TRAIL_ALWAYS_ON/TIP": "",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH": "Hiện Wave Trail lúc chết ",
   "COSMETIC/HACK_WAVE_TRAIL_ON_DEATH/TIP": "Giữ cho wave trail hiển thị khi chết",
   "COSMETIC/WAVE_PULSE_SIZE/DROPDOWN/SIZE": "Wave Pulse Multiplier",
@@ -351,12 +357,12 @@
   "LEVEL/HACK_AUTO_SONG_DOWNLOAD/TIP": "Tự động tải nhạc khi bạn mở trang xem level",
   "LEVEL/HACK_AUTO_START_POS": "StartPos Tự Động",
   "LEVEL/HACK_AUTO_START_POS/TIP": "Tự động đặt vị trí của StartPos ngay ở portal",
+  "LEVEL/HACK_CBF_GMVAR_CBS": "",
+  "LEVEL/HACK_CBF_GMVAR_CBS/TIP": "",
+  "LEVEL/HACK_CBF_GMVAR_COS": "",
+  "LEVEL/HACK_CBF_GMVAR_COS/TIP": "",
   "LEVEL/CBF/HACK_CBF": "Click Between Frames",
   "LEVEL/CBF/HACK_CBF/TIP": "Bật và tắt mod Click Between Frames của Syzzi (phải được cài trước)",
-  "LEVEL/CBF/HACK_CBF_VANILLA": "",
-  "LEVEL/CBF/HACK_CBF_VANILLA/TIP": "",
-  "LEVEL/CBF/HACK_COS_VANILLA": "",
-  "LEVEL/CBF/HACK_COS_VANILLA/TIP": "",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS": "Click trên các Bước",
   "LEVEL/CBF/DROPDOWN/CLICK_ON_STEPS/TIP": "Chỉ nhận input với 240 TPS, giữ physics của game",
   "LEVEL/HACK_CHECKPOINT_LIMIT_BYPASS": "Tắt giới hạn checkpoint",
@@ -445,6 +451,8 @@
   "LEVEL/NO_COLLISION/DROPDOWN/SPECIALS": "Specials",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED": "Seed",
   "LEVEL/RANDOM_SEED/DROPDOWN/SEED/PRE": "Seed",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE": "",
+  "LEVEL/RANDOM_SEED/DROPDOWN/HACK_LOCK_VARIANCE/TIP": "",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED": "Random Seed",
   "LEVEL/RANDOM_SEED/HACK_RANDOM_SEED/TIP": "Làm random trigger nhất quán giữa các lần chơi (bao gồm chế độ luyện tập)",
   "LEVEL/RESPAWN_TIME/DROPDOWN/SPINNER": "Thời gian (ms)",
@@ -476,6 +484,11 @@
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/MAX_DRAW/SUF": " Các khung hình",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/REQUIRE_SHOW_HITBOXES": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/UNCAPPED_EDITOR_LENGTH": "Không giới hạn độ dài editor",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/PRE": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/OPACITY/SUF": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS": "",
+  "LEVEL/SHOW_HITBOXES_TRAIL/DROPDOWN/HIGHLIGHT_HALFTICKS/TIP": "",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL": "Hiện Trail Hitbox",
   "LEVEL/SHOW_HITBOXES_TRAIL/HACK_SHOW_HITBOXES_TRAIL/TIP": "Hiển thị trail hitbox của người chơi trong các attempt, yêu cầu Hiện Hitbox",
   "LEVEL/SHOW_TRAJECTORY/HACK_SHOW_TRAJECTORY": "Hiện quỹ đạo",
@@ -627,6 +640,7 @@
   "UTILITY": "Tiện ích",
   "UTILITY/CLICKS/P1": "P1 Click",
   "UTILITY/CLICKS/P2": "P2 Click",
+  "UTILITY/CRASH": "",
   "UTILITY/DEV_TOOLS": "",
   "UTILITY/DEV_TOOLS/TIP": "",
   "UTILITY/DIRECTIONAL/P1_LEFT": "Trái",
